....I..... [ZBX-8658] made various changes to ODBC related m4 scripts to improve readability and library function availability (Juris)

--------------------------------------------------------------------------------
Changes for 2.4.5rc1

New features:

Bug fixes:
..F....... [ZBX-9203] fixed host scripts menu popup not properly displaying script name when name contains HTML tags (Ivo)

--------------------------------------------------------------------------------
Changes for 2.4.4

2.4.4rc1 was released as 2.4.4 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.4rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] enabled Chinese (China) locale to be displayed by default (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese, Korean, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
...G...PS. [ZBX-9284] added zabbix log file locking to avoid incomplete logging on log file rotation (igors)
.......PS. [ZBX-591] added interface (SourceIP) for outgoing connection in web monitoring, alerts(Ez Texting), vmware monitoring and simple checks(https services) (igors)
...G...... [ZBX-9143] improved proc.num under Windows to handle more processes (dimir)
...G...... [ZBX-9232] fixed incomplete eventlog messages (igors)
..F....... [ZBX-9257] fixed displaying missing history links in trigger context menu (Ivo)
..F....... [ZBX-9257] added missing host prefix before items in trigger context menu if trigger belongs to multiple hosts (Ivo)